Fixes centering layout issue.

--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -60,27 +60,30 @@ body {
     font-size: 18px;
   }
 }
-main {
+
+.normal-width {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 80rem;
 }
-main > * {
+.normal-width > * {
   grid-column: 3 / 11;
 }
 @media (max-width: 1200px) {
-  main > * {
+  .normal-width > * {
     grid-column: 2 / 12;
   }
 }
 @media (max-width: 600px) {
-  main > * {
+  .normal-width > * {
     grid-column: 1 / 13;
   }
 }
 article, section {
-  margin: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* Shortcodes */
